--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,7 @@
     -->
     <title>React App</title>
   </head>
+  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
